--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 2001
+CORS_ORIGIN = *
 MONGODB_URL = "mongodb+srv://souravroy200418:0XzM8eCirt3NKFbq@cluster0.noqjt.mongodb.net/0XzM8eCirt3NKFbq?retryWrites=true&w=majority&appName=Cluster0" 
